# weak_instruments

./: .buildinfo  README.md  anderson_rubin.html  cjive.html  conf.py  genindex.html  hful.html  ijive.html  index.html  index.rst  jive1.html  jive2.html  lagrange_multiplier.html  lim_et_al.html  liml.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sjive.html  tsls.html  ujive1.html  ujive2.html
.doctrees/: anderson_rubin.doctree  cjive.doctree  environment.pickle  hful.doctree  ijive.doctree  index.doctree  jive1.doctree  jive2.doctree  lagrange_multiplier.doctree  lim_et_al.doctree  liml.doctree  sjive.doctree  tsls.doctree  ujive1.doctree  ujive2.doctree
_build/: objects.inv
_sources/: index.rst.txt
docs/: conf.py  index.rst
figures/: bias_table.tex  bias_table_perc0.2_strength0.3.tex  bias_table_perc0.2_strength0.5.tex  bias_table_perc0.2_strength0.7.tex  bias_table_perc0.2_strength0.9.tex  bias_table_perc0.3_strength0.3.tex  bias_table_perc0.3_strength0.5.tex  bias_table_perc0.3_strength0.7.tex  bias_table_perc0.3_strength0.9.tex  bias_table_perc0.5_strength0.3.tex  bias_table_perc0.5_strength0.5.tex  bias_table_perc0.5_strength0.7.tex  bias_table_perc0.5_strength0.9.tex  mse_table.tex  mse_table_perc0.2_strength0.3.tex  mse_table_perc0.2_strength0.5.tex  mse_table_perc0.2_strength0.7.tex  mse_table_perc0.2_strength0.9.tex  mse_table_perc0.3_strength0.3.tex  mse_table_perc0.3_strength0.5.tex  mse_table_perc0.3_strength0.7.tex  mse_table_perc0.3_strength0.9.tex  mse_table_perc0.5_strength0.3.tex  variance_table.tex  (+15 more)
(+2709 files in other folders)
