[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_jonathan_hyatt"
version = "0.0.1"
authors = [
  { name="Jonathan Hyatt", email="hyatt.jonathan99@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]  
[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
