[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weak_instruments"
version = "0.0.1"
authors = [
  { name="Jonathan Hyatt", email="hyatt.jonathan99@gmail.com" },
  { name="Jacob Hutchings", email="jacobhutchings1@gmail.com},
]
description = "A package for weak instruments in instrumental variable regression."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/pypa/weak_instruments"
Issues = "https://github.com/pypa/weak_instruments/issues"